copy updates and CSS file shifting done to fix broken CSS file refs

--- a/angular-17-client/src/app/components/applications/applications.component.css
+++ b/angular-17-client/src/app/components/applications/applications.component.css
@@ -10,3 +10,5 @@
 .search {
 	margin-bottom: 20px;
 }
+
+.search-inpt { min-width: 400px; }
